@@ -27,13 +27,6 @@
     allowed_attributes="relatedItems backRefs"
     permission="eea.cache.invalidate" />
 
-  <browser:page
-    name="cache.invalidate.footer"
-    layer="eea.cache.interfaces.ILayer"
-    for="eea.cache.interfaces.ICacheAware"
-    class=".app.view.InvalidateCacheFooter"
-    permission="eea.cache.invalidate" />
-
   <!-- Invalidate cache z3c.form -->
   <adapter factory=".app.edit.SettingsBehavior" />
   <browser:page
